add ffmpeg rpc
